Fix: Increased font contrast ratio for prism code blocks

--- a/assets/css/prism.css
+++ b/assets/css/prism.css
@@ -54,7 +54,7 @@ pre[class*="language-"] {
 .token.prolog,
 .token.doctype,
 .token.cdata {
-	color: rgba(255, 255, 255, .4);
+	color: rgba(255, 255, 255, 1);
 }
 
 .token.punctuation {
